- Source files from typescript now working. Also using a HTML template from src folder -

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <div id="root"></div>
 
     <!-- Load in javascript files at the end of the body tag. This is reported to be better for performance downloading the webpage -->
-    <script src="build/App.js"></script>
+    <!-- <script src="build/App.js"></script> -->
 </body>
 
 </html>
