- Split the router components into separate files -

--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,7 @@
     <!-- Output for main react component -->
     <div id="root"></div>
 
-    <!-- Load in javascript files at the end of the body tag. This is reported to be better for performance downloading the webpage -->
-    <!-- <script src="build/App.js"></script> -->
+    <!-- Javascript files will be automatically injected into html. This is a feature of a webpack plugin we are using -->
 </body>
 
 </html>
